updated github to use VS code

--- a/index.html
+++ b/index.html
@@ -8,8 +8,22 @@
 
     <body>
         <h1>All About Brooke</h1>
+        <h2>Why am I Taking Computer Science?</h2>
         <p>
-            This is going to be a website all about me and the computer programming skills I've learned.
+            Computer Science was never an interest of mine a couple years ago.  But in recent times, I feel like it'd  
+            be a handy skill to have.<br>  My plans for the future is to go to college for Art and then work as an artist 
+            in some way.  However, I've discovered that artists<br>that create art digitally use coding to design the visuals 
+            in things like websites and video games.  <br> The skills that I would like to learn in Computer Science are 
+
+
         </p>
+        
+        <h3>Other activites/skills I partake in are:</h3>
+        <ul>
+            <li>Art</li>
+            <li>Playing Viloin</li>
+            <li></li>
+        </ul>
+
     </body>
 </html>
