--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             Computer Science was never an interest of mine a couple years ago.  But in recent times, I feel like it'd  
             be a handy skill to have.<br>  My plans for the future is to go to college for Art and then work as an artist 
             in some way.  However, I've discovered that artists<br>that create art digitally use coding to design the visuals 
-            in things like websites and video games.  <br> The skills that I would like to learn in Computer Science are 
+            in things like websites and video games.  <br> The skills that I would like to learn in Computer Science are. Mr. Fender is the bomb.com
 
 
         </p>
