added style sheet + about me page + image + text

--- a/index.html
+++ b/index.html
@@ -4,26 +4,26 @@
         <title>All About Brooke</title>
         <meta charset="UTF-8">
         <link rel="icon" href="favicon.png" type="image/gif" sizes="16x16">
+        <link rel="stylesheet" type="text/css" href="stylesheet.css">
     </head>
 
     <body>
         <h1>All About Brooke</h1>
         <h2>Why am I Taking Computer Science?</h2>
         <p>
-            Computer Science was never an interest of mine a couple years ago.  But in recent times, I feel like it'd  
-            be a handy skill to have.<br>  My plans for the future is to go to college for Art and then work as an artist 
-            in some way.  However, I've discovered that artists<br>that create art digitally use coding to design the visuals 
-            in things like websites and video games.  <br> The skills that I would like to learn in Computer Science are. Mr. Fender is the bomb.com
-
+            Computer Science was never an interest of mine in the past.  But recently, I feel like it'd  
+            be a handy skill to have for the future.  My plans for the after high school is to go to college for Art and then work as an artist in some way.  However, I've discovered that artists that create art digitally use coding to design the visuals in media like websites and video games. <br> The things that I am interested in learning throughout my Computer Science class are: how to code, how to code in different coding languages, how to build a PC, and how to program an app or game.  I feel as though these skills could be useful later in life, whether it be for a job or just to fix a technical problem.  Or it could just become another hobby of mine!
 
         </p>
         
         <h3>Other activites/skills I partake in are:</h3>
         <ul>
             <li>Art</li>
-            <li>Playing Viloin</li>
-            <li></li>
+            <li>Playing Violin</li>
+            <li>Gaming</li>
         </ul>
+
+        <img src=https://drive.google.com/drive/folders/1-5HhBeaceVgJzkASLCpp-zLO52HcY7aB>
 
     </body>
 </html>
