updated about_me sections, fixed images to where they now appear, style sheet updated to center images and add a footer

--- a/PC_build_guide.html
+++ b/PC_build_guide.html
@@ -14,9 +14,11 @@
     <div class="nav_bar">
         <div class="nav_links">
             <a href="index.html">Home</a>
-            <a href="about me.html">About Me</a>
-            <a href="PC build guide.html" class="active">PC Build Guide</a>
+            <a href="about_me.html">About Me</a>
+            <a href="PC_build_guide.html" class="active">PC Build Guide</a>
         </div>
     </div>
 
     <h1>Coming Soon</h1>
+
+    <img src="/Users/bmarohn54/Desktop/Under_Construction.jpg" alt="under construction">
