--- a/about_me.html
+++ b/about_me.html
@@ -15,15 +15,26 @@
         <div class="nav_links">
             <a href="index.html">Home</a>
             <a href="about_me.html" class="active">About Me</a>
-            <a href="PC build guide.html">PC Build Guide</a>
+            <a href="PC_build_guide.html">PC Build Guide</a>
         </div>
     </div>
 
+    <h2>About Me</h2>
+
+    <p>
+        My name is Brooke Marohn and I'm involved in a handful of creative hobbies. Currently, the hobby I'm most involved with is art.  I am currently taking 5 art classes year round. Just by that alone, you could probably tell art is also my favorite class. Overall, I've been perfecting this skill for the past 8 years, yet I still have much to learn.  Another hobby of mine is playing the violin.  I've been playing for 5 years and have earned multiple gold medals from Solo & Ensemble.  Also, I enjoy playing video games every once in a while.  Part of that enjoyment created an intrigue towards taking a computer science class.
+        <br>
+        After high school, I'm definitely set on going to college.  I really think going into an artistic pathway would suit me nicely, but when it comes down to specifics, I'm not sure what path I want to take.  However, there are two ways I could go.  I could go into learning Animation, or I could focus on Studio Art.  Either would be fine by me, but deciding which should be the main focus is hard to decide.  After that, I'm not sure what I'd do, but most likely trying to follow up my art degree with a job in realtion.
+    </p>
+
+
+    <h2>16 Personalities Test</h2>
+    <h4>Personality Type: INFJ (Advovates)</h4>
+    
+    <p>
+        According to the test results, INFJ's, also called Advocates, are a complex but flexible type of personality.  They have great passion for their ideals and interests, yet in other cases are introverted.  Despite their introverted nature, INFJ's are able to deeply value the relationships they are able to keep.  Also, INFJ's one of many advantages is being able to use their creativity to bring other's into peace of mind, for this personality wants to help the the people of the world achieve a peaceful state.  Because of this, many INFJ's inherit talents and hobbies that run along the creative side, from writing, to art, to creating music and the like.  However, due to their self-deterriating tendensies, they're perfectionists and any slight draw back can lead to burnout.  This even makes criticism difficult to accept, as it feel like others don't appricate what they're doing. Yet, they still continue on to help others with good intentions, they just also need to remember to take care of themselves, too.
+        <br>
+        This personality type I've been assigned is scarily accruate.  I'm noticably a very introverted person, but once I'm able to get to spend more time with people, I open up to them more and more over time.  I'm also involved in many creative hobbies.  I like to create art, play the violin, and write stories.  Not only that, but I'm very passionate about these talents to the point where I want to use these hobbies and turn them into a career.  However, I also have a habit of criticizing myself too much to the point where burn out is inevitible.  It's hard to pick myself back up again, but I come around eventually and pick right back up where I started.  So while my personality type brings a lot of set backs, it's advantages make it worth while.
+    </p>
 
     
-    <h3>Other activites/skills I partake in are:</h3>
-    <ul>
-        <li>Art</li>
-        <li>Playing Violin</li>
-        <li>Gaming</li>
-    </ul>
