--- a/index.html
+++ b/index.html
@@ -16,20 +16,25 @@
         <div class="nav_links">
             <a href="index.html" class="active">Home</a>
             <a href="about_me.html">About Me</a>
-            <a href="PC build guide.html">PC Build Guide</a>
+            <a href="PC_build_guide.html">PC Build Guide</a>
         </div>
     </div>
-    
+  
+
 
         <h2>Why am I Taking Computer Science?</h2>
         <p>
             Computer Science was never an interest of mine in the past.  But recently, I feel like it'd  
             be a handy skill to have for the future.  My plans for the after high school is to go to college for Art and then work as an artist in some way.  However, I've discovered that <strong>artists that create art digitally use coding to design the visuals in media like websites and video games.</strong> <br> The things that I am <em>really</em> interested in learning throughout my Computer Science class are: how to code, how to code in different coding languages, how to build a PC, and how to program an app or game.  I feel as though these skills could be useful later in life, whether it be for a job or just to fix a technical problem.  Or it could just become another hobby of mine!
 
-        </p>
-        
+            <h3>Other activites/skills I partake in are:</h3>
+            <ul>
+                <li>Art</li>
+                <li>Playing Violin</li>
+                <li>Gaming</li>
+            </ul>
 
-        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fknowyourmeme.com%2Fmemes%2Fthumbs-up-crying-cat&psig=AOvVaw0HGcPtOHHnBYZodne5z4Tm&ust=1603863788971000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCNjcs92I1OwCFQAAAAAdAAAAABAD">
+        <img src="/Users/bmarohn54/Desktop/pumpkin.jpg" alt="digital painting of a pumpkin I painted">
 
     </body>
 </html>
