--- a/index.html
+++ b/index.html
@@ -1,26 +1,30 @@
 <!DOCTYPE html>
-<html>
+<html> <!-- tells the computer youre writing in the HTML format. -->
     <head>
         <title>All About Brooke</title>
         <meta charset="UTF-8">
-        <link rel="icon" href="favicon.png" type="image/gif" sizes="16x16">
-        <link rel="stylesheet" type="text/css" href="stylesheet.css">
+        <link rel="icon" href="favicon.png" type="image/gif" sizes="16x16"> <!-- sets the fav icon as the pages tab icon -->
+        <link rel="stylesheet" type="text/css" href="stylesheet.css"> <!-- links the style sheet to the html -->
     </head>
 
     <body>
-        <div class="title_bar">
-        <h1> All About Brooke</h1>
+
+    <div class="title_bar">  
+        <!-- "div class=" is used to group tags for CSS purposes. -->
+        <h1> All About Brooke</h1>  <!-- adds text to the title bar -->
     </div>
     
-    <div class="nav_bar">
+    <div class="nav_bar">  
+        <!-- this div class connected the links to other webpages to the nav bar -->
         <div class="nav_links">
-            <a href="index.html" class="active">Home</a>
+            <a href="index.html" class="active">Home</a> 
             <a href="about_me.html">About Me</a>
             <a href="PC_build_guide.html">PC Build Guide</a>
+            <!-- href= links the other webpages into the nav -->
         </div>
     </div>
   
-
+   
 
         <h2>Why am I Taking Computer Science?</h2>
         <p>
@@ -35,6 +39,7 @@
             </ul>
 
         <img src="/Users/bmarohn54/Desktop/pumpkin.jpg" alt="digital painting of a pumpkin I painted">
+        <!-- scr= image link,  arc= simple description of image -->
 
     </body>
 </html>
